k8s/client/depl.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: py-server-depl


spec:
  replicas: 1
  selector:
    matchLabels:
      app: py-server-depl

  template:
    metadata:
      labels:
        app: py-server-depl

    spec:
      containers:
        - name: py-server
          image: mokhlesur96/dj:9b8c6f0934937ba26b784c95773be048209b0e8b
          ports:
            - containerPort: 8000
