k8s/client/svc.yaml
apiVersion: v1
kind: Service
metadata:
  name: py-server-svc

spec:
  selector:
    app: py-server-depl

  ports:
    - port: 8001
      targetPort: 8000
      nodePort: 30515
  type: NodePort
