k8s/client/ing.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: py-server-ing

spec:
  rules:
    - http:
        paths:
          - backend:
              service:
                name: py-server-svc
                port:
                  number: 8000
            pathType: Prefix
